# rl_navigation

./: .gitattributes  .gitignore  MANIFEST.in  README.md  config.py  data_reward_fg__unity.npy  environment.yml  fg.py  fg_msgs.py  fg_video.py  fgtrain.py  plot_train_fg.py  pyproject.toml  readme.md  setup.cfg  setup.py  small_starting_set.npy  tox.ini
conda.recipe/: meta.yaml
docs/: conf.py  index.rst
docs/api/: core.rst  observers.rst  simulators.rst  tasks.rst
docs/api/observers/: flight_goggles.rst
docs/api/simulators/: simple_simulator.rst
docs/api/tasks/: hover.rst  pointnav.rst
resources/: environment.yml
rl_navigation/: _cli_tool.py  _version.py
rl_navigation/subcommands/: config.py  train.py
src/bindings/: meson.build  meson_options.txt
src/bindings/scripts/: detect_python_version.py
src/bindings/sophus/: meson.build  sophus_bindings.cpp
src/bindings/subprojects/: sophus.wrap
src/rl_navigation/: __init__.py  _cli_tool.py  config.py  disaster.py  fg.py  fg_msgs.py  fg_video.py  fgtrain.py  math_utilities.py  plot_train_fg.py  version.py
src/rl_navigation/observers/: fast_depth_estimation.py  flight_goggles_renderer.py  goal_point.py  search.py  tesse_renderer.py
src/rl_navigation/rllib/: pointnav.py  search.py  utils.py
src/rl_navigation/simulators/: actions.py  car_simulator.py  simple_simulator.py
src/rl_navigation/subcommands/: __init__.py  plot.py  train.py  video.py
src/rl_navigation/tasks/: hover.py  pointnav.py  search.py
src/rl_navigation/utils/: flight_goggles_cfgs.py  image.py  resetter.py  stata_basement.csv  stata_ground_floor.csv  stata_ground_floor_car.csv  stata_resetter.py
src/rl_navigation_models/policies/: README.md  __init__.py  rllib_pointnav.py  stable_baselines_basic_hover.py
tests/: conftest.py  test_cli.py  test_default.py
